# libminicalci

./: CMakeLists.txt  README.md
cmake/: uninstall.cmake.in
src/Math/QSqrt/: QSqrt.c  QSqrt.h
test/: QSqrt.c
